external-crates/move/crates/move-package-alt/tests/data/missing_required_package_segment/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: TOML parse error at line 1, column 1
  |
1 | [dependencies]
  | ^
missing field `package`
